force-app/main/default/objects/Eligibility_Check__c/Eligibility_Check__c.object-meta.xml
<CustomObject>
    <description>PHI eligibility check result for a patient coverage. Sharing is Controlled by Parent so it inherits Patient Private OWD.</description>
    <label>Eligibility Check</label>
    <nameField>
        <displayFormat>ELIG-{00000000}</displayFormat>
        <label>Eligibility Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>