force-app/main/default/objects/Eligibility_Check__c/fields/Application_Mode__c.field-meta.xml
<CustomField>
    <fullName>Application_Mode__c</fullName>
    <description
  >Application mode reported by Stedi for this attempt. Blank when no mode was returned.</description>
    <label>Application Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>