force-app/main/default/objects/Eligibility_Check__c/fields/Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Checked_Date__c</fullName>
    <label>Checked Date</label>
    <type>DateTime</type>
</CustomField>