force-app/main/default/objects/Eligibility_Check__c/fields/Coinsurance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_Percent__c</fullName>
    <label>Coinsurance Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>