force-app/main/default/objects/Eligibility_Check__c/fields/Copay__c.field-meta.xml
<CustomField>
    <fullName>Copay__c</fullName>
    <label>Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>