force-app/main/default/objects/Eligibility_Check__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Eligibility Checks</relationshipLabel>
    <relationshipName>Eligibility_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>