force-app/main/default/objects/Eligibility_Check__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>