force-app/main/default/objects/Eligibility_Check__c/fields/Deductible_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Remaining__c</fullName>
    <label>Deductible Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>