force-app/main/default/objects/Eligibility_Check__c/fields/Provider_Used__c.field-meta.xml
<CustomField>
    <fullName>Provider_Used__c</fullName>
    <defaultValue>"Stedi"</defaultValue>
    <label>Provider Used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>