force-app/main/default/objects/Eligibility_Check__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>PHI. Eligibility request payload sent to the provider.</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>