force-app/main/default/objects/Eligibility_Check__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>Stedi service type code, e.g. 30 = health benefit plan coverage</inlineHelpText>
    <label>Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>