force-app/main/default/objects/Eligibility_Check__c/fields/Stedi_Trace_Id__c.field-meta.xml
<CustomField>
    <fullName>Stedi_Trace_Id__c</fullName>
    <description
  >Stedi response meta.traceId, falling back to meta.outboundTraceId when absent.</description>
    <label>Stedi Trace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>