force-app/main/default/objects/Eligibility_Check__c/listViews/All_Checks.listView-meta.xml
<ListView>
    <fullName>All_Checks</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Coverage__c</columns>
    <columns>Status__c</columns>
    <columns>Checked_Date__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Provider_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Checks</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>