force-app/main/default/objects/Eligibility_Check__c/listViews/Recent_Checks.listView-meta.xml
<ListView>
    <fullName>Recent_Checks</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Coverage__c</columns>
    <columns>Status__c</columns>
    <columns>Checked_Date__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Provider_Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Checked_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Checks</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>